--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #ffffff;
   font-family: 'Roboto', sans-serif;
@@ -6,20 +10,76 @@ body {
   color: #777777;
 }
 
-#nav{
-  font-size: 1.25em;
+header {
+  background-color: #ffffff;
+  text-align: center;
+  padding: 20px 0 10px 0;
+  -webkit-box-shadow: 0px 7px 8px -2px rgba(50, 50, 50, 0.22);
+  -moz-box-shadow: 0px 7px 8px -2px rgba(50, 50, 50, 0.22);
+  box-shadow: 0px 7px 8px -2px rgba(50, 50, 50, 0.22);
+  position: fixed;
+  display: inline-block;
+  width: 100%
+}
+
+main {
+  padding-top: 120.36px;
+}
+
+.logo {
+  max-width: 250px;
+}
+
+nav {
+  display: inline-block;
+  width: 100%;
+}
+
+nav>ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav>ul>li {
+  display: inline-block;
+}
+
+nav>ul>li>a {
+  padding: 0 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #777777;
+}
+
+#nav {
+  font-size: 1em;
+}
+
+#hero {
+  display: inline-block;
+  padding: 20px 0;
+  width: 100%;
+}
+
+#work .row {
+  padding-bottom: 25px;
+  border-bottom: 1px solid #cccccc;
+}
+
+footer {
+  padding-bottom: 20px;
+  text-align: center;
 }
 
 h1 {
   font-size: 3em;
-  font-weight:700;
+  font-weight: 700;
   line-height: 1em;
 }
 
 h2 {
   font-size: 1.5em;
   font-weight: 500;
-  line-height: .1em;
 }
 
 h3 {
@@ -59,6 +119,10 @@ a:active {
   transition: .2s opacity;
 }
 
+.center {
+  text-align: center;
+}
+
 .button:hover {
   opacity: .8;
   text-decoration: none;
@@ -77,4 +141,14 @@ a:active {
 .button.contact:hover {
   background-color: #00abc8;
   color: #ffffff !important;
+}
+
+
+/* Layout Styling */
+.container {
+  padding: 0 15px;
+}
+
+.row {
+  margin: 25px 0;
 }
