--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.33em;
   color: #777777;
 }
 
@@ -24,10 +25,6 @@ header {
 
 main {
   padding-top: 120.36px;
-}
-
-.logo {
-  max-width: 250px;
 }
 
 nav {
@@ -51,14 +48,14 @@ nav>ul>li>a {
   color: #777777;
 }
 
-#nav {
+#navbar {
   font-size: 1em;
 }
 
 #hero {
   display: inline-block;
-  padding: 20px 0;
   width: 100%;
+  text-align: center;
 }
 
 #work .row {
@@ -67,8 +64,8 @@ nav>ul>li>a {
 }
 
 footer {
-  padding-bottom: 20px;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 h1 {
@@ -80,6 +77,7 @@ h1 {
 h2 {
   font-size: 1.5em;
   font-weight: 500;
+  line-height: 1.25em;
 }
 
 h3 {
@@ -92,6 +90,7 @@ h3 {
 img {
   width: 100%
 }
+
 
 a {
   color: #00abc8;
@@ -108,6 +107,15 @@ a:active {
   opacity: 0.8;
 }
 
+.logo {
+  max-width: 250px;
+  text-align: center;
+}
+
+.center {
+  text-align: center;
+}
+
 .button {
   display: inline-block;
   background-color: #00abc8;
@@ -117,10 +125,6 @@ a:active {
   padding: 10px;
   border-radius: 3px;
   transition: .2s opacity;
-}
-
-.center {
-  text-align: center;
 }
 
 .button:hover {
@@ -143,6 +147,46 @@ a:active {
   color: #ffffff !important;
 }
 
+.hide {
+  display: none;
+}
+
+.title {
+  display: block;
+  padding-top: 20px;
+}
+
+
+/* Animation */
+
+@keyframes color-change {
+  from {fill: #edc655;}
+  to {fill: #f76414;}
+}
+
+.sun {
+  animation: 2s color-change infinite alternate linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px,48px);}
+}
+
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+
 
 /* Layout Styling */
 .container {
@@ -151,4 +195,90 @@ a:active {
 
 .row {
   margin: 25px 0;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 0 10px;
+}
+
+.berlin-illustration {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+
+/* MEDIUM DEVICES 640px and larger*/
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+  }
+
+  .logo {
+    padding-top: 12px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+  }
+
+  body {
+    font-size: 18px;
+  }
+
+  .hide {
+    display: none;
+  }
+
+  .title {
+    display: block;
+    padding-top: 10px;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+
+}
+
+
+/* LARGE DEVICES 1024px or larger*/
+@media only screen and (min-width: 1024px) {
+  body {
+    font-size: 20px;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .col-lg-6 {
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    width: 58.33%;
+  }
+
+  .col-lg-5 {
+    width: 41.66%;
+  }
+
+  .hide {
+    display: inline-block;
+  }
+
+  .title {
+    display: inline-block;
+  }
 }
