--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
 
 header {
   background-color: #ffffff;
-  text-align: center;
   padding: 20px 0 10px 0;
   -webkit-box-shadow: 0px 7px 8px -2px rgba(50, 50, 50, 0.22);
   -moz-box-shadow: 0px 7px 8px -2px rgba(50, 50, 50, 0.22);
@@ -27,18 +26,11 @@ main {
   padding-top: 120.36px;
 }
 
-nav {
-  display: inline-block;
-  width: 100%;
-}
+
 
 nav>ul {
   list-style-type: none;
   padding: 0;
-}
-
-nav>ul>li {
-  display: inline-block;
 }
 
 nav>ul>li>a {
@@ -46,6 +38,26 @@ nav>ul>li>a {
   text-transform: uppercase;
   font-weight: 700;
   color: #777777;
+}
+
+.navtoggle li:not(:last-child) {
+  display: none;
+}
+
+.navtoggle, .navtoggle.responsive {
+  position: relative;
+}
+
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  padding-right: 0;
+  font-size: 20px;
+}
+
+.icon {
+  color: #00abc8;
 }
 
 #navbar {
@@ -108,7 +120,7 @@ a:active {
 }
 
 .logo {
-  max-width: 250px;
+  max-width: 150px;
   text-align: center;
 }
 
@@ -228,6 +240,18 @@ a:active {
   nav {
     width: auto;
     float: right;
+  }
+
+  nav>ul>li {
+    display: inline-block;
+  }
+
+  .navtoggle li:not(:last-child) {
+  display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+  display: none;
   }
 
   body {
